--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "root",
    "password": "root",
    "database": "readit",
-   "synchronize": true,
+   "synchronize": false,
    "logging": true,
    "entities": [
       "src/entities/**/*.ts"
