--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.3.7",
     "next": "12.0.0",
+    "postcss": "^8.2.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
