--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
