--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.33",
     "typescript": "^4.4.4"
   }
