--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.4",
+    "concurrently": "^6.3.0",
     "morgan": "^1.10.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
@@ -31,7 +32,9 @@
   },
   "scripts": {
     "start": "ts-node src/server.ts",
-    "dev": "nodemon --exec ts-node src/server.ts",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "server": "nodemon --exec ts-node src/server.ts",
+    "client": "cd client && yarn dev",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "dev": "concurrently \"yarn server\" \"yarn client\" --names server,client"
   }
 }
