--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.38"
+    "typeorm": "0.2.38",
+    "typeorm-seeding": "^1.6.1"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
     "server": "nodemon --exec ts-node src/server.ts",
     "client": "cd client && yarn dev",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "dev": "concurrently \"yarn server\" \"yarn client\" --names server,client"
+    "dev": "concurrently \"yarn server\" \"yarn client\" --names server,client",
+    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   }
 }
