--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
