--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ NODE_ENV=development
 APP_URL=http://localhost:5000
 ORIGIN=http://localhost:3000
 JWT_SECRET=somesecretpass
+
+DB_DIALECT=postgres
+DB_PORT=5432
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=readit
