--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
@@ -34,7 +35,7 @@
     "typeorm-seeding": "^1.6.1"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "node build/server.js",
     "server": "nodemon --exec ts-node src/server.ts",
     "client": "cd client && yarn dev",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
